# dioxus-recompile-test

./: Cargo.toml  readme.md
dep/: Cargo.toml  build.rs
dep/src/: lib.rs
